# cxx.simplelog

./: .clang-format  .clang-tidy  .clang-tidy.json  .cmake-format  .cmake_project.cxx_standard  .cmakelintrc  .editorconfig  .envrc  .gitignore  .lcovrc  .rosinstall  .subrepos  CMakeLists.txt  Dockerfile  EXPLORE_logging_frameworks.rst  GNUmakefile  LICENSE  README.rst  cmake_build.yaml  example_boostlog_main.cpp  example_main.cpp  example_null_main.cpp  example_spdlog_main.cpp  invoke.yaml  main.example_spdlog.cpp  py.requirements.txt
.cmake/: SyslogTargets.cmake  SystemdTargets.cmake  project-config.cmake.in
.github/workflows/: ci.yml
boost_log.example/: CMakeLists.txt  basic_usage.main.cpp
cmake/: .editorconfig  CPM.cmake  CodeCoverage.cmake  FindSyslog.cmake  FindSystemd.cmake  Finddoctest.cmake  Findspdlog.cmake  README.rst  WarningsAsErrors.cmake  build_config.cmake  ccache.cmake  clang-tidy.cmake  cpack_basic.cmake  cxx.setup_cxx_standard.cmake  cxx.setup_project.cmake  finddoctest.cmake  project.setup_cxx.cmake  show_system_info.cmake
cmake/toolchain/: host_clang.cmake  host_gcc.cmake  macOS_clang_x86_64.cmake
cmake_project/: bootstrap_subprojects_with_gitmodules.cmake  bootstrap_subprojects_with_wstool.cmake
examples/: CMakeLists.txt  main.example_null.cpp  main.example_spdlog.cpp  main.example_syslog.cpp  main.gcc_variadic_args_recipe_for_zero_args.cpp  main.variadic_args_recipe_for_zero_args.cpp  simplelog.user_config.hpp
src/simplelog/: CMakeLists.txt  LogMacros.hpp  TraceMacros.hpp  config.hpp  simplelog.user_config.example.hpp
src/simplelog/backend/: CMakeLists.txt
src/simplelog/backend/common/: ModuleBase.hpp  ModuleRegistry.hpp
src/simplelog/backend/detail/: LogBackendDerivedMacros.hpp
src/simplelog/backend/null/: CMakeLists.txt  LogBackendMacros.hpp
src/simplelog/backend/spdlog/: CMakeLists.txt  LogBackendMacros.hpp  ModuleUtil.hpp  SetupUtil.hpp  Utils.hpp
src/simplelog/backend/syslog/: CMakeLists.txt  LogBackendMacros.hpp  Module.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  ModuleUtil.hpp
src/simplelog/backend/systemd_journal/: CMakeLists.txt  LogBackendMacros.hpp  Module.hpp  ModuleRegistry.hpp
src/simplelog/detail/: DiagMacros.hpp  LogBackendDerivedMacros.hpp  LogBackendMacros.hpp  LogMacros0.hpp  SelectLogBackend.hpp  StringifyMacro.hpp
tasks/: __init__.py  cmake.py  cxx.py  invoke_cleanup.py  py.requirements.txt
tests/: CMakeLists.txt
tests/simplelog/: CMakeLists.txt  test_LogMacros.compiled.cpp  test_LogMacros.cpp  test_LogMacros0.compiled.cpp  test_LogMacros0.cpp  test_TraceMacros.compiled.cpp  test_TraceMacros.cpp  test_backend.cpp  test_main.cpp
tests/simplelog.backend.null/: CMakeLists.txt  test_LogMacros.cpp  test_compilable.LogMacros.cpp  test_compilable.LogMacros0.cpp  test_compilable.TraceMacros.cpp  test_main.cpp
tests/simplelog.backend.spdlog/: CMakeLists.txt  CleanupLoggingFixture.hpp  test_ModuleUtil.cpp  test_SetupUtil.cpp  test_compilable.LogMacros.cpp  test_compilable.LogMacros0.cpp  test_compilable.TraceMacros.cpp  test_main.cpp  test_setup_spdlog.cpp
tests/test_support/: CaptureOutputStream.hpp  doctest.stringify_std.shared_ptr.hpp  doctest.stringify_std.vector.hpp
